// Copyright 2018 The Goma Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

import "auth/auth.proto";

package auth;

service AuthService {
  rpc Auth(AuthReq) returns (AuthResp) {}
}
