// Copyright 2018 The Goma Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

import "cache/cache.proto";

package cache;

service CacheService {
  rpc Get(GetReq) returns (GetResp) {}
  rpc Put(PutReq) returns (PutResp) {}
}
